--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,11 @@
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="images/faces/spax/Smirk.png">
         <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
+        <!--phucking bootstrap-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <!---->
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
         <title>Spax's Site</title>
     </head>
@@ -24,7 +29,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    images/faces/claire/Neutral.png
+                    ../images/faces/claire/Neutral.png
                         "></img>
                     Hey nerds. It's me, Claire.
                 </div>
@@ -32,48 +37,48 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    images/faces/claire/Happy.png
+                    ../images/faces/claire/Happy.png
                         "></img>
                     I am now on a poggers website. Woo!
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                images/faces/claire/Sigh.png
-                    "></img>
-                Anyways it's time for some fucking debugging.
+                        <img src="
+                    ../images/faces/claire/Sigh.png
+                        "></img>
+                    Anyways it's time for some fucking debugging.
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                images/faces/aimottle/Unsure.png
-                    "></img>
-                Spax, you don't know what you're doing at all, do you?
+                        <img src="
+                    ../images/faces/aimottle/Unsure.png
+                        "></img>
+                    Spax, you don't know what you're doing at all, do you?
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                images/faces/spax/Worried.png
-                    "></img>
-                Well no... but-
+                        <img src="
+                    ../images/faces/spax/Worried.png
+                        "></img>
+                    Well no... but-
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                images/faces/spax/Worried.png
-                    "></img>
-                ...
+                        <img src="
+                    ../images/faces/spax/Worried.png
+                        "></img>
+                    ...
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                images/faces/spax/Pensive.png
-                    "></img>
+                        <img src="
+                    ../images/faces/spax/Pensive.png
+                        "></img>
                 </div>
             </div>
             <br>
@@ -90,34 +95,34 @@
             <br>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                images/faces/aimottle/Neutral.png
-                    "></img>
+                        <img src="
+                    ../images/faces/aimottle/Neutral.png
+                        "></img>
                     HOLY SHIT THEY ACTUALLY FIXED MOST OF THE CODE
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                images/faces/claire/Aghast.png
-                    "></img>
+                        <img src="
+                    ../images/faces/claire/Aghast.png
+                        "></img>
                     How tf-
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                images/faces/spax/Dizzy.png
-                    "></img>
+                        <img src="
+                    ../images/faces/spax/Dizzy.png
+                        "></img>
                     I have no clue how I did it I'm so tired now
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                images/faces/yoki/Sweat_Drop.png
-                    "></img>
-                (I still don't know where the <i>fuck</i> I am-)
+                        <img src="
+                    ../images/faces/yoki/Sweat_Drop.png
+                        "></img>
+                    (I still don't know where the <i>fuck</i> I am-)
                 </div>
             </div>
         </div>
