--- a/html/index.html
+++ b/html/index.html
@@ -126,7 +126,6 @@
                 </div>
             </div>
         </div>
-        <script src="js/scrollparallax.js"></script>
         <!--
         //this works; don't fucking touch it kiddo
         <div class="text-box flex-container unselectable"  id="ominous-countdown"></div>
@@ -143,5 +142,6 @@
                 );
             });
         </script>-->
+        <script src="../js/scrollparallax.js"></script>
     </body>
 </html>
