--- a/html/plannedchanges.html
+++ b/html/plannedchanges.html
@@ -222,7 +222,7 @@
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    (<a href="index.html">Click here</a> to go back to the main page!)
+                    (<a href="../html/index.html">Click here</a> to go back to the main page!)
                 </div>
             </div>
         </div>
