--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta property="og:title" content="Spax's Site">
         <meta property="og:description" content="I make dumb shit and spend most of my time on the things that don't matter.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="images/faces/spax/Smirk.png">
+        <meta name="og:image" itemprop="image" content="/images/faces/spax/Smirk.png">
         <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <link rel="stylesheet" href="css/styles.css" type=text/css>
         <meta http-equiv="Refresh" content="0; url='html/index.html'"/>
