--- a/html/isspaxatschool.html
+++ b/html/isspaxatschool.html
@@ -22,7 +22,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Smirk.png
+                    images/spax/Smirk.png
                         "></img>
                     Yo. Spax here. The javascript I wrote for this website doesn't work at the moment, so I'll be updating this manually until I fix it.
                 </div>
@@ -30,18 +30,60 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Look.png
+                    images/faces/spax/Blush.png
                         "></img>
-                    Currently I'm at school, but I'll be at lunch very soon!<br>
-                    (Also note that I'm in a very bad-service area of my school.)
+                    Currently I'm TOO LAZY TO EDIT THIS EVERY FUCKING TIME I TRANSITION.
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Blush.png
+                    images/faces/spax/Look.png
                         "></img>
-                    Thanks for visiting my site!
+                    Yea... no... this page is not gonna be useful until I actually fix the javascript.
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/faces/spax/Smirk.png
+                        "></img>
+                    But for now, I'll leave you with a (working) clock configured to my timezone.
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div id="date1">
+                    This text should be replaced by the js. If you're seeing this, it means that I AM GOING TO FIRE MYSELF
+                    </span>
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div id="date1">
+                    Schedule on weekdays:<br>
+                    12:00am-6:44am = <span class="dnd-gray">Sleeping</span><br>
+                    6:45am-7:29am = <span class="dnd-green">Going to school
+                    </span><br>
+                    7:30am-10:47am = <span class="dnd-red">In school
+                    </span><br>
+                    10:48am-11:16am = <span class="dnd-green">Eating lunch
+                    </span><br>
+                    11:17am-2:24pm = <span class="dnd-red">In school
+                    </span><br>
+                    2:25pm-3:29pm = <span class="dnd-green">Going home
+                    </span><br>
+                    3:30pm+ = <span class="dnd-yellow">Working on homework and other activities
+                    </span><br>
+                    8:30pm-11:59pm = <span class="dnd-gray">Sleeping
+                    </span><br>
+                    <br>Key:<br>
+                    <span class="dnd-green">Green</span> = Online (normally active on discord)
+                    <br>
+                    <span class="dnd-red">Red</span> = In school (relatively active on discord with bad cell service)
+                    <br>
+                    <span class="dnd-yellow">Yellow</span> = Out of school but possibly working on other stuff (may not have my phone on me)
+                    <br>
+                    <span class="dnd-gray">Gray</span> = Sleeping (or at least supposed to be. I normally get my phone taken away at 8:30pm.)
+                    <br>
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
@@ -50,6 +92,7 @@
                 </div>
             </div>
         </div>
+        <script src="../js/timezonething.js" type=text/javascript></script>
         <!--<div class="text-box flex-container unselectable">
             <div style="color:red;">
                 Current status: Broken.<br>
