no .html extension woooo

--- a/html/allspaxfaces.html
+++ b/html/allspaxfaces.html
@@ -15,6 +15,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!---->
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="canonical" href="https://spiritaxolotl.github.io/html/allspaxfaces"/>
         <title>All of Spax's Face Sprites</title>
     </head>
     <body>
