--- a/html/isspaxatschool.html
+++ b/html/isspaxatschool.html
@@ -15,6 +15,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!---->
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="canonical" href="https://spiritaxolotl.github.io/html/isspaxatschool"/>
         <title>Is Spax At School?</title>
     </head>
     <body>
@@ -22,7 +23,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    images/spax/Smirk.png
+                    ../images/spax/Smirk.png
                         "></img>
                     Yo. Spax here. The javascript I wrote for this website doesn't work at the moment, so I'll be updating this manually until I fix it.
                 </div>
@@ -30,7 +31,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    images/faces/spax/Blush.png
+                    ../images/faces/spax/Blush.png
                         "></img>
                     Currently I'm TOO LAZY TO EDIT THIS EVERY FUCKING TIME I TRANSITION.
                 </div>
@@ -38,7 +39,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    images/faces/spax/Look.png
+                    ../images/faces/spax/Look.png
                         "></img>
                     Yea... no... this page is not gonna be useful until I actually fix the javascript.
                 </div>
@@ -46,7 +47,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    images/faces/spax/Smirk.png
+                    ../images/faces/spax/Smirk.png
                         "></img>
                     But for now, I'll leave you with a (working) clock configured to my timezone.
                 </div>
@@ -88,7 +89,7 @@
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    (<a href="index.html">Click here</a> to go back to the main page!)
+                    (<a href="index">Click here</a> to go back to the main page!)
                 </div>
             </div>
         </div>
@@ -109,7 +110,7 @@
         </div>
         <div class="text-box flex-container unselectable">
             <div>
-                (And <a href="index.html">click here</a> to go back to the main page!)
+                (And <a href="index">click here</a> to go back to the main page!)
             </div>
         </div>
         <div class="text-box flex-container unselectable">
