--- a/html/plannedchanges.html
+++ b/html/plannedchanges.html
@@ -15,6 +15,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!---->
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="canonical" href="https://spiritaxolotl.github.io/html/plannedchanges"/>
         <title>All of Spax's Face Sprites</title>
     </head>
     <body>
@@ -72,7 +73,7 @@
                         <img src="
                     ../images/faces/spax/Smirk.png
                         "></img>
-                    First, I want to make a real front page. Not like the test/placeholder one I have up at the current moment. I'll move that to a different url like test.html or something like that.
+                    First, I want to make a real front page. Not like the test/placeholder one I have up at the current moment. I'll move that to a different url like test or something like that.
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
@@ -80,7 +81,7 @@
                         <img src="
                     ../images/faces/spax/Smirk.png
                         "></img>
-                    Then I want to put actual relevant stuff on the page. Things like my youtube, my modfiles for <a href="https://noti.tg">NotITG</a>, and a few things about my personality, along with relevant links like that <a href="isspaxatschool.html">school schedule site thing</a>. Speaking of which...
+                    Then I want to put actual relevant stuff on the page. Things like my youtube, my modfiles for <a href="https://noti.tg">NotITG</a>, and a few things about my personality, along with relevant links like that <a href="isspaxatschool">school schedule site thing</a>. Speaking of which...
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
@@ -222,7 +223,7 @@
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    (<a href="../html/index.html">Click here</a> to go back to the main page!)
+                    (<a href="../html/index">Click here</a> to go back to the main page!)
                 </div>
             </div>
         </div>
