--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -16,6 +16,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!---->
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="canonical" href="https://spiritaxolotl.github.io/html/sitelist"/>
         <title>Spax's Site List</title>
     </head>
     <body>
@@ -48,49 +49,49 @@
             <br>
             <!--<div class="text-box flex-container unselectable">
                 <div>
-                <a href=iwanttodie.html>I want to die</a><br>
+                <a href=iwanttodie>I want to die</a><br>
                 <span style="color:red;">A page that talks about my constant suffering being alive. I'm sorry.</span>
                 </div>
             </div>-->
             <div class="text-box flex-container unselectable">
                 <div>
-                <a href=index.html>Main Page</a><br>
+                <a href=index>Main Page</a><br>
                 The main page to the website. Right now it's a test placeholder but I'll put useful stuff on here eventually.
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                <a href=isspaxatschool.html>Is Spax At School?</a><br>
+                <a href=isspaxatschool>Is Spax At School?</a><br>
                 This page uses JavaScript to see my schedule and update the text box to state whether I'm currently at school or not, but it doesn't fully work right now. I'll overhaul it another time, but just know that this exists.
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                <a href=changelog.html>Changelog</a><br>
+                <a href=changelog>Changelog</a><br>
                 The manually edited changelog for the site. Currently being updated every day I make major changes on the site so that I don't regret not documenting it in the future.
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                <a href=allspaxfaces.html>All Spax Faces</a><br>
+                <a href=allspaxfaces>All Spax Faces</a><br>
                 When originally making this site and testing the text box functionality, I went a little too far with a gag and ended up making 14 sprites for my axolotl character. I only ended up using two of them but in this site, you can see all the expressions I made for them! (No but seriously I spent two fucking hours on them aaaa)
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                <a href=plannedchanges.html>Planned Changes</a><br>
+                <a href=plannedchanges>Planned Changes</a><br>
                 Here I'll try to do weekly updates stating what I want to change about this site. Just to get my ideas down and so viewers can see them. But yea enjoy my emotional rants here. 
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                <a href=rangalshutthehellup.html>Shut the HELL up Rangal</a><br>
+                <a href=rangalshutthehellup>Shut the HELL up Rangal</a><br>
                 I made this page for whenever a person in the DEP discord server says something edgy, horny, controversial, etc. Meant to be lighthearted and Rangal knows it's a joke. We all good.
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                <a href=sitelist.html>Site List</a><br>
+                <a href=sitelist>Site List</a><br>
                 ...it's literally this page. Hey, I wasn't lying when I said I would include *every* site on this page.
                 </div>
             </div>
