--- a/html/thecountdown.html
+++ b/html/thecountdown.html
@@ -16,6 +16,7 @@
         crossorigin="anonymous">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!---->
+        <link rel="canonical" href="https://spiritaxolotl.github.io/html/thecountdown"/>
     </head>
     <body>
         <div id="ominous-countdown"></div>
