--- a/html/index.html
+++ b/html/index.html
@@ -16,13 +16,14 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!---->
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="canonical" href="https://spiritaxolotl.github.io/html/index"/>
         <title>Spax's Site</title>
     </head>
     <body>
         <div id="bg">
             <div class="text-box flex-container unselectable">
                 <div>
-                    <a href="../html/sitelist.html">Click here</a> to see my full site list!<br>
+                    <a href="../html/sitelist">Click here</a> to see my full site list!<br>
                     -Spax</span>
                 </div>
             </div>
