--- a/html/mrc3timezones.html
+++ b/html/mrc3timezones.html
@@ -15,6 +15,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!---->
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="canonical" href="https://spiritaxolotl.github.io/html/mrc3timezones"/>
         <title>Mods Rush Couples 3 Splixel Timezones</title>
     </head>
     <body>
@@ -46,7 +47,7 @@
             </div>-->
             <div class="text-box flex-container unselectable">
                 <div>
-                    (And <a href="../html/index.html">click here</a> to go back to the main page!)
+                    (And <a href="../html/index">click here</a> to go back to the main page!)
                 </div>
             </div>
             <script src="../js/timezonething.js" type=text/javascript></script>
