--- a/html/resources.html
+++ b/html/resources.html
@@ -9,7 +9,7 @@
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="../../images/faces/spax/Smirk.png">
         <!---->
-        <meta http-equiv="Refresh" content="0; url='sitelist.html'"/>
+        <meta http-equiv="Refresh" content="0; url='sitelist'"/>
         <!---->
         <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
@@ -18,6 +18,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!---->
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="canonical" href="https://spiritaxolotl.github.io/html/resources"/>
         <title>All of Spax's Face Sprites</title>
     </head>
     <body>
@@ -32,7 +33,7 @@
             </div>
             <div class="text-box flex-container unselectable">
                     <div>
-                        (<a href="index.html">Click here</a> to go back to the main page!)
+                        (<a href="index">Click here</a> to go back to the main page!)
                     </div> 
                 </div>
             </div>
