lmao fixed a mistake

--- a/html/isspaxatschool.html
+++ b/html/isspaxatschool.html
@@ -23,7 +23,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/spax/Smirk.png
+                    ../images/faces/spax/Smirk.png
                         "></img>
                     Yo. Spax here. The javascript I wrote for this website doesn't work at the moment, so I'll be updating this manually until I fix it.
                 </div>
@@ -55,7 +55,6 @@
             <div class="text-box flex-container unselectable">
                 <div id="date1">
                     This text should be replaced by the js. If you're seeing this, it means that I AM GOING TO FIRE MYSELF
-                    </span>
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
