actually no fuck it. "Woo" time

--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -39,7 +39,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Happy.png
+                    ../images/faces/spax/Woo.png
                         "></img>
                 So now I'm making a webpage that hosts all of DEP's dialogue as seen in-game!
                 </div>
