--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="All DEP Dialogue">
         <meta property="og:description" content="A dump of all dialogue in Temmie's Dweller's Empty Path.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/faces/yoki/Neutral.png">
+        <meta name="og:image" itemprop="image" content="images/faces/yoki/Neutral.png">
         <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
