--- a/html/plannedchanges.html
+++ b/html/plannedchanges.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="All Spax DEP Face Sprites">
         <meta property="og:description" content="All of the changes that I'm planning on making for the website soon!">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png">
+        <meta name="og:image" itemprop="image" content="images/faces/spax/Smirk.png">
         <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
