--- a/html/thecountdown.html
+++ b/html/thecountdown.html
@@ -9,7 +9,7 @@
         <meta property="og:title" content="The Countdown">
         <meta property="og:description" content="Hey... you're not supposed to be here.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="/images/spax/Smirk.png">
+        <meta name="og:image" itemprop="image" content="images/spax/Smirk.png">
         <link rel="icon" href="/images/spax/Dizzy.png"></link>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
