added the intro to depdialogue

--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -84,6 +84,188 @@
                     Spax is still working on the site... come back here later when it updates.
                 </div>
             </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                    Index:<br>
+                    <!--
+                    <a href="#"></a>
+                    -->
+                    <a href="#intro-text">Intro</a>
+                </div>
+            </div>
+            <div class="title-text-box title-flex-container">
+                <div id="intro-text">
+                    Intro
+                </div>
+            </div>
+            <div class="desc-text-box desc-flex-container">
+                <div>
+                    After the player starts the game, the screen becomes dark green and nightmare.ogg starts playing. Text appears.
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                    ......................
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                    ........My head.....
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                    .............It hurts..........
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                    All of these voices..and...<br>
+                    All of these faces are flooding into my head...... 
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                    Who.... are they...?
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                    Ah...................... 
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                    It feels like....<br>
+                    My head’s gonna burst open....... Someone....... Make it stop...........
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                    Someone.......<br>
+                    Make it stop...........
+                </div>
+            </div>
+            <div class="desc-text-box desc-flex-container">
+                <div>
+                    A large eye appears in front of the player, and disappears within a few seconds.<br>
+                    It then fades into a view of a person in bed, suddenly waking up.
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                        <img src="
+                    ../images/faces/yoki/Surprised.png
+                        "></img>
+                    .............!!!
+                </div>
+            </div>
+            <div class="desc-text-box desc-flex-container">
+                <div>
+                    She blinks and sits up.
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                        <img src="
+                    ../images/faces/yoki/Neutral.png
+                        "></img>
+                    ...............
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                        <img src="
+                    ../images/faces/yoki/Disheartened.png
+                        "></img>
+                    ....Another nightmare..
+                </div>
+            </div>
+            <div class="desc-text-box desc-flex-container">
+                <div>
+                    She then lies in bed again, staring at the ceiling.
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                        <img src="
+                    ../images/faces/yoki/Disheartened.png
+                        "></img>
+                    I’ve been getting a lot of these lately....
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                        <img src="
+                    ../images/faces/yoki/Disheartened.png
+                        "></img>
+                    ...
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                        <img src="
+                    ../images/faces/yoki/Annoyed.png
+                        "></img>
+                    ..I have a feeling HE’s behind this one again.
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                        <img src="
+                    ../images/faces/yoki/Annoyed.png
+                        "></img>
+                    ........
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                        <img src="
+                    ../images/faces/yoki/Think.png
+                        "></img>
+                    I don’t think I can fall back asleep after THAT.
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                        <img src="
+                    ../images/faces/yoki/Annoyed.png
+                        "></img>
+                    ...
+                </div>
+            </div>
+            <div class="desc-text-box desc-flex-container">
+                <div>
+                    She starts getting out of bed.
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                        <img src="
+                    ../images/faces/yoki/Look.png
+                        "></img>
+                    Well...<br>
+                    No use laying around in bed.
+                </div>
+            </div>
+            <div class="desc-text-box desc-flex-container">
+                <div>
+                    A portrait shot of the character pans up.
+                </div>
+            </div>
+            <div class="text-box flex-container">
+                <div>
+                        <img src="
+                    ../images/faces/yoki/Neutral.png
+                        "></img>
+                    Guess I’ll go for a walk to clear my mind a bit.
+                </div>
+            </div>
+            <div class="desc-text-box desc-flex-container">
+                <div>
+                    [End of Event]
+                </div>
+            </div>
             <!--<div class="text-box flex-container unselectable">
                 <div>
                         <img src="
