--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -84,7 +84,7 @@
                     Spax is still working on the site... come back here later when it updates.
                 </div>
             </div>
-            <div class="text-box long-flex-container unselectable">
+            <div class="text-box flex-container unselectable">
                 <div>
                     Index:<br>
                     <!--
