--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -137,7 +137,7 @@
             <div class="text-box flex-container">
                 <div>
                     It feels like....<br>
-                    My head’s gonna burst open....... Someone....... Make it stop...........
+                    My head’s gonna burst open.......
                 </div>
             </div>
             <div class="text-box flex-container">
