quick dialogue change

--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -33,7 +33,7 @@
                         <img src="
                     ../images/faces/spax/Neutral.png
                         "></img>
-                    I've been in the DEP community for over a year and a half now, and I've been wanting to give back to the community for quite awhile now.
+                    I've been in the DEP server for over a year and a half now, and I've been wanting to give back to the community for quite awhile now.
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
