--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -243,7 +243,7 @@
                 <div>
                         <img src="
                     ../images/faces/yoki/Look.png
-                        "></img>
+                        "></img></div>
                     Well...<br>
                     No use laying around in bed.
                 </div>
