lot of fixes (damn I really need to do the changelog)

--- a/html/rangalshutthehellup.html
+++ b/html/rangalshutthehellup.html
@@ -12,9 +12,8 @@
         <title>SHUR UP RANGAK</title>
         <!--NOTE: Those typos are on purpose. I know it's supposed to say "SHUT UP RANGAL" but the typos are funnier imo-->
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
+        <script src="../js/bootstrap.min.js"></script>
         <!---->
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
         <link rel="canonical" href="https://spiritaxolotl.github.io/html/rangalshutthehellup"/>
