--- a/html/plannedchanges.html
+++ b/html/plannedchanges.html
@@ -10,9 +10,8 @@
         <meta name="og:image" itemprop="image" content="images/faces/spax/Smirk.png">
         <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
+        <script src="../js/bootstrap.min.js"></script>
         <!---->
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
         <link rel="canonical" href="https://spiritaxolotl.github.io/html/plannedchanges"/>
@@ -223,7 +222,7 @@
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    (<a href="../html/index">Click here</a> to go back to the main page!)
+                    (<a href="../html/main">Click here</a> to go back to the main page!)
                 </div>
             </div>
         </div>
