--- a/index.html
+++ b/index.html
@@ -11,139 +11,14 @@
         <meta name="og:image" itemprop="image" content="/images/faces/spax/Smirk.png">
         <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
+        <script src="../js/bootstrap.min.js"></script>
         <!---->
         <link rel="stylesheet" href="css/styles.css" type=text/css>
         <link rel="canonical" href="https://spiritaxolotl.github.io/index"/>
-        <meta http-equiv="Refresh" content="0; url='html/index'"/>
-        <title>Spax's Site</title>
+        <meta http-equiv="Refresh" content="0; url='html/main'"/>
+        <title>Redirect Go brrrrr</title>
     </head>
     <body>
-        <div id="bg">
-            <div class="text-box flex-container unselectable">
-                <div>
-                    <a href="html/sitelist">Click here</a> to see my full site list!<br>
-                    -Spax</span>
-                </div>
-            </div>
-            <div class="text-box flex-container unselectable">
-                <div>
-                        <img src="
-                    images/faces/claire/Neutral.png
-                        "></img>
-                    Hey nerds. It's me, Claire.
-                </div>
-            </div>
-            <div class="text-box flex-container unselectable">
-                <div>
-                        <img src="
-                    images/faces/claire/Happy.png
-                        "></img>
-                    I am now on a poggers website. Woo!
-                </div>
-            </div>
-            <div class="text-box flex-container unselectable">
-                <div>
-                    <img src="
-                images/faces/claire/Sigh.png
-                    "></img>
-                Anyways it's time for some fucking debugging.
-                </div>
-            </div>
-            <div class="text-box flex-container unselectable">
-                <div>
-                    <img src="
-                images/faces/aimottle/Unsure.png
-                    "></img>
-                Spax, you don't know what you're doing at all, do you?
-                </div>
-            </div>
-            <div class="text-box flex-container unselectable">
-                <div>
-                    <img src="
-                images/faces/spax/Worried.png
-                    "></img>
-                Well no... but-
-                </div>
-            </div>
-            <div class="text-box flex-container unselectable">
-                <div>
-                    <img src="
-                images/faces/spax/Worried.png
-                    "></img>
-                ...
-                </div>
-            </div>
-            <div class="text-box flex-container unselectable">
-                <div>
-                    <img src="
-                images/faces/spax/Pensive.png
-                    "></img>
-                </div>
-            </div>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <div class="text-box flex-container unselectable">
-                <div>
-                    <img src="
-                images/faces/aimottle/Neutral.png
-                    "></img>
-                    HOLY SHIT THEY ACTUALLY FIXED MOST OF THE CODE
-                </div>
-            </div>
-            <div class="text-box flex-container unselectable">
-                <div>
-                    <img src="
-                images/faces/claire/Aghast.png
-                    "></img>
-                    How tf-
-                </div>
-            </div>
-            <div class="text-box flex-container unselectable">
-                <div>
-                    <img src="
-                images/faces/spax/Dizzy.png
-                    "></img>
-                    I have no clue how I did it I'm so tired now
-                </div>
-            </div>
-            <div class="text-box flex-container unselectable">
-                <div>
-                    <img src="
-                images/faces/yoki/Sweat_Drop.png
-                    "></img>
-                (I still don't know where the <i>fuck</i> I am-)
-                </div>
-            </div>
-        </div>
-        <script src="js/scrollparallax.js"></script>
-        <!--
-        //this works; don't fucking touch it kiddo
-        <div class="text-box flex-container unselectable"  id="ominous-countdown"></div>
-        </div>
-        <script type="text/javascript">(function(){window['__CF$cv$params']={r:'6d98c0e03e54c7d5',m:'fYOcFE2KHU8Uamq_CEoNI9GgDqzzTxlgAY8aDwGqMMo-1644196382-0-AdtPtcTeuNBR9RU7N0f1bUSknvAZAZlqUbnsWRsrjxZ3iTvk5j4qWutdSePRK2YPyqC5PUy6SPea/L40oaDl6jvtNjhP7KNm2RByM9wtAspDORing5CA53EOj9d1JmRRi7qHucVUBHLxi4LBzr/iAu4fgwyHD5jNEfDSeP0nowWVBgDFJbFCkoTt6dFuA3CdYQ==',s:[0xeb660911f4,0x789e72129e],}})();</script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="jquery.countdown.min.js"></script>
-        <script>
-            $('#ominous-countdown')
-            .countdown("2022/06/03", function(event) {
-                $(this).text(
-                    event.strftime('%D:%H:%M:%S')
-                );
-            });
-        </script>-->
     </body>
 </html>
