forgot the underscores lol

--- a/html/MojoArrowAdvice.html
+++ b/html/MojoArrowAdvice.html
@@ -40,7 +40,7 @@
                         <img src="
                     ../images/faces/spax/Smirk.png
                         "></img>
-                    But for now, use the default site for it (<a href="https://snap.berkeley.edu/project?user=daveyyyyyyy&project=Mojo%20Arrow%20Advice%E2%84%A2" target="blank">click here</a>).
+                    But for now, use the default site for it (<a href="https://snap.berkeley.edu/project?user=daveyyyyyyy&project=Mojo%20Arrow%20Advice%E2%84%A2" target="_blank">click here</a>).
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
@@ -56,7 +56,7 @@
                         <img src="
                     ../images/faces/spax/Woo.png
                         "></img>
-                    ALSO PLAY NOTITG IT'S A COOL GAME <a href="https://noti.tg/" target="blank">https://noti.tg/</a>
+                    ALSO PLAY NOTITG IT'S A COOL GAME <a href="https://noti.tg/" target="_blank">https://noti.tg/</a>
                 </div>
             </div>
         </div>
