WOOOO mojo site up

--- a/html/MojoArrowAdvice.html
+++ b/html/MojoArrowAdvice.html
@@ -18,47 +18,11 @@
         <title>Mojo's Arrow Advice!</title>
     </head>
     <body>
-        <div id="bg">
-            <div class="text-box flex-container unselectable">
-                <div>
-                        <img src="
-                    ../images/faces/spax/Smirk.png
-                        "></img>
-                    Haha this page isn't up yet.
-                </div>
-            </div>
-            <div class="text-box flex-container unselectable">
-                <div>
-                        <img src="
-                    ../images/faces/spax/Look.png
-                        "></img>
-                    Currently trying to figure out how to host a Snap<i>!</i> project on my website.
-                </div>
-            </div>
-            <div class="text-box flex-container unselectable">
-                <div>
-                        <img src="
-                    ../images/faces/spax/Smirk.png
-                        "></img>
-                    But for now, use the default site for it (<a href="https://snap.berkeley.edu/project?user=daveyyyyyyy&project=Mojo%20Arrow%20Advice%E2%84%A2" target="_blank">click here</a>).
-                </div>
-            </div>
-            <div class="text-box flex-container unselectable">
-                <div>
-                        <img src="
-                    ../images/faces/spax/Blush.png
-                        "></img>
-                    Thank you for playing my silly project!
-                </div>
-            </div>
-            <div class="text-box flex-container unselectable">
-                <div>
-                        <img src="
-                    ../images/faces/spax/Woo.png
-                        "></img>
-                    ALSO PLAY NOTITG IT'S A COOL GAME <a href="https://noti.tg/" target="_blank">https://noti.tg/</a>
-                </div>
-            </div>
+        <iframe
+            allowfullscreen allow="geolocation; microphone; camera"
+            src="https://snap.berkeley.edu/embed?project=Mojo%20Arrow%20Advice%E2%84%A2&user=daveyyyyyyy"
+            width="720" height="540" frameBorder=0>
+        </iframe>
         </div>
         <script src="../js/scrollparallax.js" type=text/javascript></script>
     </body>
