--- a/html/MojoArrowAdvice.html
+++ b/html/MojoArrowAdvice.html
@@ -23,7 +23,17 @@
             src="https://snap.berkeley.edu/embed?project=Mojo%20Arrow%20Advice%E2%84%A2&user=daveyyyyyyy"
             width="720" height="540" frameBorder=0>
         </iframe>
-        </div>
+        <div class="text-box flex-container unselectable">
+                <div>
+                    Controls:<br>
+                    Enter = Submit Chart<br>
+                    Space = Clear Chart<br>
+                    Arrow Keys = Input Chart<br>
+                    Click = You'll figure it out<br>
+                    <br>
+                    Enjoy!
+                </div>
+            </div>
         <script src="../js/scrollparallax.js" type=text/javascript></script>
     </body>
 </html>
