--- a/html/MojoArrowAdvice.html
+++ b/html/MojoArrowAdvice.html
@@ -18,20 +18,22 @@
         <title>Mojo's Arrow Advice!</title>
     </head>
     <body>
-        <iframe
-            allowfullscreen allow="geolocation; microphone; camera"
-            src="https://snap.berkeley.edu/embed?project=Mojo%20Arrow%20Advice%E2%84%A2&user=daveyyyyyyy"
-            width="720" height="540" frameBorder=0>
-        </iframe>
-        <div class="text-box flex-container unselectable">
-                <div>
-                    Controls:<br>
-                    Enter = Submit Chart<br>
-                    Space = Clear Chart<br>
-                    Arrow Keys = Input Chart<br>
-                    Click = You'll figure it out<br>
-                    <br>
-                    Enjoy!
+        <div id="bg">
+            <iframe
+                allowfullscreen allow="geolocation; microphone; camera"
+                src="https://snap.berkeley.edu/embed?project=Mojo%20Arrow%20Advice%E2%84%A2&user=daveyyyyyyy"
+                width="720" height="540" frameBorder=0>
+            </iframe>
+            <div class="text-box flex-container unselectable">
+                    <div>
+                        Controls:<br>
+                        Enter = Submit Chart<br>
+                        Space = Clear Chart<br>
+                        Arrow Keys = Input Chart<br>
+                        Click = You'll figure it out<br>
+                        <br>
+                        Enjoy!
+                    </div>
                 </div>
             </div>
         <script src="../js/scrollparallax.js" type=text/javascript></script>
