--- a/html/MojoArrowAdvice.html
+++ b/html/MojoArrowAdvice.html
@@ -31,6 +31,7 @@
                         Space = Clear Chart<br>
                         Arrow Keys = Input Chart<br>
                         Click = You'll figure it out<br>
+                        C = Toggle "Censor Mode"<br>
                         <br>
                         Enjoy!
                     </div>
