tried adding text box shit

--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -5,13 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta property="og:title" content="All DEP Dialogue">
-        <meta property="og:description" content="A dump of all dialogue in Temmie's game &quot;Dweller's Empty Path&quot;."">
+        <meta property="og:description" content="A dump of all dialogue in Temmie's game &quot;Dweller's Empty Path&quot;.">
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="../images/faces/yoki/Neutral.png">
         <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <script src="../js/bootstrap.min.js"></script>
+        <script src="../js/textbox.js"></script>
         <!---->
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
         <link rel="canonical" href="https://spiritaxolotl.github.io/html/DEPalldialogue"/>
@@ -19,6 +20,12 @@
     </head>
     <body>
         <div id="bg">
+            <!--
+            <tb name="spax" face="smirk">
+                Yo! It's me! Spax!
+            </tb>
+            -->
+            <!--I want that to do the equivalent of:  -->
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
@@ -27,6 +34,7 @@
                     Yo! It's me! Spax!
                 </div>
             </div>
+            <!-- ^ this ^ -->
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
