--- a/html/resources.html
+++ b/html/resources.html
@@ -9,7 +9,7 @@
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="images/faces/spax/Smirk.png">
         <!---->
-        <meta http-equiv="Refresh" content="0; url='sitelist'"/>
+        <!--<meta http-equiv="Refresh" content="0; url='sitelist'"/>-->
         <!---->
         <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
@@ -25,9 +25,9 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/claire/Mad.png
+                    ../images/faces/yoki/Dizzy.png
                         "></img>
-                    A WIP.
+                    I am dizzy Yoki.
                 </div> 
             </div>
             <div class="text-box flex-container unselectable">
